Auth work to get token by email and secure endpoints

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     networks:
       - 'dockernet'
     environment:
-      - "APP_URL=golf.statstracker.com"
+      - "APP_URL=www.statstracker.golf"
       - "CACHE_DURATION=100"
       - "TIMEOUT_VALUE=100"
     ports:
