--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,14 +1,10 @@
-{
-  "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es6",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./"
-  },
-  "exclude": ["node_modules"]
-}
+{"compilerOptions": {
+        "lib": ["es6", "dom"],
+        "target": "es6",
+        "module": "commonjs",
+        "outDir": "./build",
+        "moduleResolution": "node",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "sourceMap": true
+    }}
